[package]
name = "gmmk-pro-brightness-knob"
version = "0.1.0"
authors = ["andycodesstuff"]
edition = "2021"
description = "Make your Glorious GMMK PRO keyboard's knob adjust the brightness of your display"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
keyframe = "1.1.1"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
